--- a/src/tabletennismanager/FXMLDocument.fxml
+++ b/src/tabletennismanager/FXMLDocument.fxml
@@ -48,11 +48,11 @@
                                     <Font size="24.0" />
                                  </font>
                               </Label>
-                              <MenuButton fx:id="selectTeamViewMatch0" layoutX="20.0" layoutY="240.0" mnemonicParsing="false" onAction="#selectTeamHandle" prefHeight="25.0" prefWidth="199.0" text="Select Home Team" textAlignment="CENTER">
+                              <MenuButton fx:id="selectTeamViewMatch0" layoutX="20.0" layoutY="240.0" mnemonicParsing="false"  prefHeight="25.0" prefWidth="199.0" text="Select Home Team" textAlignment="CENTER">
                                  <font>
                                     <Font size="14.0" />
                                  </font></MenuButton>
-                              <MenuButton fx:id="selectTeamViewMatch1" layoutX="20.0" layoutY="280.0" mnemonicParsing="false" onAction="#selectTeamHandle" prefHeight="25.0" prefWidth="200.0" text="Select Away Team" textAlignment="CENTER">
+                              <MenuButton fx:id="selectTeamViewMatch1" layoutX="20.0" layoutY="280.0" mnemonicParsing="false"  prefHeight="25.0" prefWidth="200.0" text="Select Away Team" textAlignment="CENTER">
                                  <font>
                                     <Font size="14.0" />
                                  </font></MenuButton>
@@ -756,7 +756,7 @@
                                                 <Font size="16.0" />
                                              </font>
                                           </Text>
-                                          <MenuButton fx:id="selectTeam" layoutX="310.0" layoutY="64.0" mnemonicParsing="false" onAction="#selectTeamHandle" prefHeight="25.0" prefWidth="149.0" text="Select Team" textAlignment="CENTER" AnchorPane.topAnchor="64.0">
+                                          <MenuButton fx:id="selectTeam" layoutX="310.0" layoutY="64.0" mnemonicParsing="false"  prefHeight="25.0" prefWidth="149.0" text="Select Team" textAlignment="CENTER" AnchorPane.topAnchor="64.0">
                                              <font>
                                                 <Font size="14.0" />
                                              </font>
